Use ConfigDataApplicationContextInitializer in consul example